# abstractpb

./: .gitignore  README.md  abstractpb_types.h
example/: CMakeLists.txt  Makefile  README.md  build.sh  main.cc  main.mm  setup-protoc.sh  setup-protolib.sh
example/apb/: Output.apb.h  Payment.apb.h  PaymentAck.apb.h  PaymentDetails.apb.h  PaymentRequest.apb.h  README.md  apb_from_pb.cc  apb_from_pb.h  apb_to_pb.cc  apb_to_pb.h
example/apb/osx/: apb_from_pb.hpp  apb_from_pb.mm  apb_to_pb.hpp  apb_to_pb.mm
example/generatedcpp/: Output.pb.cc  Output.pb.h  OutputV3.pb.cc  OutputV3.pb.h  Payment.pb.cc  Payment.pb.h  PaymentAck.pb.cc  PaymentAck.pb.h  PaymentAckV3.pb.cc  PaymentAckV3.pb.h  PaymentDetails.pb.cc  PaymentDetails.pb.h  PaymentDetailsV3.pb.cc  PaymentDetailsV3.pb.h  PaymentRequest.pb.cc  PaymentRequest.pb.h  PaymentRequestV3.pb.cc  PaymentRequestV3.pb.h  PaymentV3.pb.cc  PaymentV3.pb.h
example/messagesV2/: Output.proto  Payment.proto  PaymentAck.proto  PaymentDetails.proto  PaymentRequest.proto  README.md
example/messagesV3/: PaymentDetailsV3.proto  PaymentV3.proto  README.md
example/scripts/: clean.sh  gen-apb.sh  gen-cpp.bat  gen-cpp.sh  setup-protoc.bat  setup-protoc.sh  setup-protolib.bat  setup-protolib.sh
example/xcode/: README.md
example/xcode/apb-example.xcodeproj/: project.pbxproj
protoc-plugin/: Makefile  README.md  shard.yml
protoc-plugin/scripts/: gen-test-cppabs.sh
protoc-plugin/spec/: protobuf_spec.cr  spec_helper.cr
protoc-plugin/spec/fixtures/: test.proto  test3.proto
protoc-plugin/src/: generator.cr  protoc-gen-cppabs.cr
test/: Makefile  README.md  main.cpp  setup-gtest.sh  test_ints.cpp  test_strings.cpp
